--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
                     </div>
                     <nav>
                         <ul>
-                            <li><a href="#">Home</a></li>
                             <li><a href="#">Services</a></li>
-                            <li><a href="#">features</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a class="active" href="#">Contact us</a></li>
+                            <li><a href="#">About us</a></li>
+                            <li><a href="#">Contact us</a></li>
+                            <li><a class="active" href="#">Login</a></li>
                         </ul>
                     </nav>
                 </div>
