--- a/index.html
+++ b/index.html
@@ -55,6 +55,56 @@
             <div class="wave"></div>
         </section>
 
+        <section class="services">
+            <div class="container">
+                <div class="main-title">
+                    <h2>Our Services</h2>
+                </div>
+                <div class="services-secs row justify-content-center align-items-center">
+                    <div class="services-box col-lg-4 col-sm-12 active">
+                        <div class="services-box-icon">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="services-box-text">
+                            <h3>Text Title</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, ullam doloremque
+                                asperiores officia</p>
+                        </div>
+                    </div>
+                    <div class="services-box col-lg-4 col-sm-12">
+                        <div class="services-box-icon">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="services-box-text">
+                            <h3>Text Title</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, ullam doloremque
+                                asperiores officia</p>
+                        </div>
+                    </div>
+                    <div class="services-box col-lg-4 col-sm-12">
+                        <div class="services-box-icon">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="services-box-text">
+                            <h3>Text Title</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, ullam doloremque
+                                asperiores officia</p>
+                        </div>
+                    </div>
+                    <div class="services-box col-lg-4 col-sm-12">
+                        <div class="services-box-icon">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="services-box-text">
+                            <h3>Text Title</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, ullam doloremque
+                                asperiores officia</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <script src="js/popper.min.js"></script>
         <script src="js/jquery-3.6.4.min.js"></script>
         <script src="js/bootstrap.js"></script>
