--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="health care">
         <title>Document</title>
         <link rel="stylesheet" href="css/all.css">
         <link rel="stylesheet" href="css/normaliz.css">
@@ -99,6 +100,50 @@
                             <h3>Text Title</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, ullam doloremque
                                 asperiores officia</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="fancy-border"></div>
+        </section>
+        <section class="choose">
+            <div class="container">
+                <div class="choose-secs row align-items-center">
+                    <div class="choose-imges col-lg-6 col-md-4 col-sm-12">
+                        <div class="choos-imges-box">
+                            <img class="choose-img-large"
+                                src="images/smiley-businesswoman-posing-outdoors-with-arms-crossed-copy-space_23-2148767055.avif"
+                                alt="">
+                            <img class="choose-img-small"
+                                src="images/smiley-businesswoman-posing-outdoors-with-arms-crossed-copy-space_23-2148767055.avif"
+                                alt="">
+                        </div>
+                        <div class="choos-imges-box">
+                            <img class="choose-img-xsmall"
+                                src="images/smiley-businesswoman-posing-outdoors-with-arms-crossed-copy-space_23-2148767055.avif"
+                                alt="">
+                            <img class="choose-img-xlarge"
+                                src="images/smiley-businesswoman-posing-outdoors-with-arms-crossed-copy-space_23-2148767055.avif"
+                                alt="">
+                        </div>
+                    </div>
+                    <div class="choose-text col-lg-6 col-md-4 col-sm-12">
+                        <h2>Why Should Choose Cakap?</h2>
+                        <div class="choose-text-sec">
+                            <i class="fa-solid fa-user"></i>
+                            <div class="choose-text-par">
+                                <h3>test title</h3>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.sit amet consectetur
+                                    adipisicing</p>
+                            </div>
+                        </div>
+                        <div class="choose-text-sec">
+                            <i class="fa-solid fa-user"></i>
+                            <div class="choose-text-par">
+                                <h3>test title</h3>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.sit amet consectetur
+                                    adipisicing</p>
+                            </div>
                         </div>
                     </div>
                 </div>
