--- a/index.html
+++ b/index.html
@@ -150,6 +150,38 @@
             </div>
         </section>
 
+        <section class="other">
+            <!-- <div class="fancy-border-other"></div> -->
+            <div class="container">
+                <div class="other-secs row align-items-center">
+                    <div class="other-box col-lg-5 col-md-4 col-sm-12">
+                        <h2>Other Programs</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, inventore nesciunt ipsum,
+                            quis perspiciatis quaerat consequuntur.</p>
+                    </div>
+                    <div class="other-box-cards col-lg-5 col-md-4 col-sm-12">
+                        <div class="other-box-1">
+                            <h3>Cakap Corporate</h3>
+                            <i class="fa-solid fa-user"></i>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, amet. Doloremque nisi
+                                reprehenderit.</P>
+                            <button>See More</button>
+                        </div>
+                        <div class="other-box-2">
+                            <h3>Cakap Corporate</h3>
+                            <i class="fa-solid fa-user"></i>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, amet. Doloremque nisi
+                                reprehenderit.</P>
+                            <button>See More</button>
+                        </div>
+                        <div class="fancy-border-other-cards fancy-fancy"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="other-container">
+            <div class="wave"></div>
+        </section>
         <script src="js/popper.min.js"></script>
         <script src="js/jquery-3.6.4.min.js"></script>
         <script src="js/bootstrap.js"></script>
