--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="css/normaliz.css">
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+
     </head>
 
     <body>
@@ -181,6 +183,29 @@
         </section>
         <section class="other-container">
             <div class="wave"></div>
+        </section>
+
+        <section class="reviews">
+            <div class="reviews-main-title">
+                <h2>What our costumers are saying</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur consequatur obcaecati, cum
+                    reiciendis molestiae dolor</p>
+            </div>
+            <div class="container">
+                <div class="the-comment">
+                    <div class="comment-img"><img
+                            src="images/smiling-attractive-business-lady-office-260nw-606183782.webp" alt="">
+                    </div>
+                    <div class="comment-text">
+                        <i class="fa-solid fa-quote-right"></i>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad asperiores deleniti saepe quia
+                            temporibus? Eveniet facilis assumenda quia repellat itaque repudiandae. Fuga, rerum incidunt
+                            aperiam vel exercitationem facere ducimus eligendi.</p>
+                        <h4> dwakdjkwajd</h4>
+                        <span> wmadkwdmnkwa</span>
+                    </div>
+                </div>
+            </div>
         </section>
         <script src="js/popper.min.js"></script>
         <script src="js/jquery-3.6.4.min.js"></script>
